refactoring grid to work on mobile. pushing bc chrome doesnt return isMobile correctly

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,16 +2,8 @@
   border: 1px red solid;
   display: grid;
   grid-template: repeat(50, 2%) / repeat(50, 2%);
-  height: 100vh;
-  width: 200vw;
-  padding-left: 12vw;
+  justify-items: center;
   align-items: center;
-}
-
-.content {
-  display: flex;
-  height: 100vh;
-  border: 2px blue;
 }
 
 .image {
